Added phpunit coverage on server side
